Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/cdi-integration.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/cdi-integration.adoc.po
@@ -58,17 +58,17 @@ msgstr "バリデーション"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:31
 msgid "In the _initialization_ phase the preparatory work is being carried out and custom contexts are registered.  _Bean discovery_ is then the process where the container analyzes all application classes, identifies beans and wires them all together based on the provided metadata.  Subsequently, the extensions can register _synthetic components_.  Attributes of these components are fully controlled by the extensions, i.e. are not derived from an existing class.  Finally, the _deployment is validated_.  For example, the container validates every injection point in the application and fails the build if there is no bean that satisfies the given required type and qualifiers."
-msgstr ""
+msgstr "_初期化_ フェーズでは、準備作業が行われ、カスタムコンテキストが登録されます。その後、コンテナーがすべてのアプリケーションクラスを分析し、Beanを識別し、提供されたメタデータに基づいてそれらをすべて繋ぎ合わせるプロセスがBean _ディスカバリ_ です。その後、エクステンションは _合成コンポーネント_ を登録することができます。これらのコンポーネントの属性はエクステンションによって完全に制御されます。最後に、 _デプロイメントが検証されます_ 。例えば、コンテナーはアプリケーション内のすべての注入ポイントを検証し、与えられた必要な型と修飾子を満たすBeanがない場合はビルドを失敗させます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:33
 msgid "You can see more information about the bootstrap by enabling additional logging. Simply run the Maven build with `-X` or `--debug` and grep the lines that contain `io.quarkus.arc`. In the <<cdi-reference.adoc#dev-mode,development mode>>, you can use `quarkus.log.category.\"io.quarkus.arc.processor\".level=DEBUG` and two special endpoints are also registered automatically to provide some basic debug info in the JSON format."
-msgstr ""
+msgstr "追加のロギングを有効にすることで、ブートストラップに関するより多くの情報を見ることができます。 `-X` または `--debug` で Maven ビルドを実行し、 `io.quarkus.arc` を含む行を grep するだけです。 link:cdi-reference.html#dev-mode[開発モード] では、 `quarkus.log.category.\"io.quarkus.arc.processor\".level=DEBUG` を使用することができ、2つの特別なエンドポイントも自動的に登録され、JSON形式でいくつかの基本的なデバッグ情報を提供します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:36
 msgid "Quarkus build steps can produce and consume various build items and hook into each phase.  In the following sections we will describe all the relevant build items and common scenarios."
-msgstr ""
+msgstr "Quarkusのビルドステップでは、さまざまなビルドアイテムを生成したり消費したりして、各フェーズにフックすることができます。以下のセクションでは、関連するすべてのビルド項目と一般的なシナリオについて説明します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:37
@@ -79,7 +79,7 @@ msgstr "メタデータソース"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:44
 msgid "Classes and annotations are the primary source of bean-level metadata.  The initial metadata are read from the _bean archive index_, an immutable https://github.com/wildfly/jandex[Jandex index, window=\"_blank\"] which is built from various sources during <<cdi-reference.adoc#bean_discovery,bean discovery>>.  However, extensions can add, remove or transform the metadata at certain stages of the bootstrap.  Moreover, extensions can also register <<synthetic_beans,synthetic components>>.  This is an important aspect to realize when integrating CDI components in Quarkus."
-msgstr ""
+msgstr "クラスとアノテーションは、Beanレベルのメタデータの主要なソースです。初期のメタデータは、Beanの link:cdi-reference.html#bean_discovery[ディスカバリ] 時に様々なソースから構築される不変の link:https://github.com/wildfly/jandex[Jandexインデックス, window=\"_blank\"] である _Beanアーカイブインデックス_ から読み込まれます。しかし、エクステンションは、ブートストラップの特定の段階でメタデータを追加、削除、変換することができます。さらに、エクステンションは link:#synthetic_beans[合成コンポーネント] を登録することもできます。これは、CDIコンポーネントをQuarkusに統合する際に実現すべき重要な側面です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:47
@@ -939,12 +939,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:506
 #, no-wrap
 msgid "Available Build Time Metadata"
-msgstr ""
+msgstr "利用可能なビルドタイムメタデータ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:510
 msgid "Any of the above extensions that operates with `BuildExtension.BuildContext` can leverage certain build time metadata that are generated during build.  The built-in keys located in `io.quarkus.arc.processor.BuildExtension.Key` are:"
-msgstr ""
+msgstr "`BuildExtension.BuildContext` で動作する上記のエクステンションはいずれも、ビルドタイムに生成される特定のビルドタイムメタデータを利用することができます。 `io.quarkus.arc.processor.BuildExtension.Key` にある組込キーは以下の通りです。"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:511
@@ -1048,73 +1048,73 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:525
 msgid "To get hold of these, simply query the extension context object for given key.  Note that these metadata are made available as build proceeds which means that extensions can only leverage metadata that were built before the extensions are invoked.  If your extension attempts to retrieve metadata that wasn't yet produced, `null` will be returned.  Here is a summary of which extensions can access which metadata:"
-msgstr ""
+msgstr "これらのメタデータを取得するには、そのキーのエクステンションコンテキストオブジェクトをクエリするだけ可能です。これらのメタデータはビルドが進むにつれて利用可能になることに注意してください。エクステンションがまだ生成されていないメタデータを取得しようとすると、 `null` が返されます。どのエクステンションがどのメタデータにアクセスできるかをまとめてみました。"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:526
 #, no-wrap
 msgid "AnnotationsTransformer"
-msgstr ""
+msgstr "AnnotationsTransformer"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:527
 msgid "Shouldn't rely on any metadata as it could be used at any time in any phase of the bootstrap"
-msgstr ""
+msgstr "ブートストラップのどのフェーズでもいつでも使えるので、メタデータに頼るべきではありません。"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:527
 #, no-wrap
 msgid "ContextRegistrar"
-msgstr ""
+msgstr "ContextRegistrar"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:528
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:529
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:530
 msgid "Has access to `ANNOTATION_STORE`, `QUALIFIERS`, `INTERCEPTOR_BINDINGS`, `STEREOTYPES`"
-msgstr ""
+msgstr "`ANNOTATION_STORE` , `QUALIFIERS` , `INTERCEPTOR_BINDINGS` . `STEREOTYPES` にアクセスできます。"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:528
 #, no-wrap
 msgid "InjectionPointsTransformer"
-msgstr ""
+msgstr "InjectionPointsTransformer"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:529
 #, no-wrap
 msgid "ObserverTransformer"
-msgstr ""
+msgstr "ObserverTransformer"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:530
 #, no-wrap
 msgid "BeanRegistrar"
-msgstr ""
+msgstr "BeanRegistrar"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:531
 msgid "Has access to `ANNOTATION_STORE`, `QUALIFIERS`, `INTERCEPTOR_BINDINGS`, `STEREOTYPES`, `BEANS` (class-based beans only), `OBSERVERS` (class-based observers only), `INJECTION_POINTS`"
-msgstr ""
+msgstr "`ANNOTATION_STORE`, `QUALIFIERS`, `INTERCEPTOR_BINDINGS`, `STEREOTYPES`, `BEANS` (class-based beans only), `OBSERVERS` (class-based observers only), `INJECTION_POINTS` にアクセスできます。"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:531
 #, no-wrap
 msgid "ObserverRegistrar"
-msgstr ""
+msgstr "ObserverRegistrar"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:532
 msgid "Has access to `ANNOTATION_STORE`, `QUALIFIERS`, `INTERCEPTOR_BINDINGS`, `STEREOTYPES`, `BEANS`, `OBSERVERS` (class-based observers only), `INJECTION_POINTS`"
-msgstr ""
+msgstr "`ANNOTATION_STORE` , `QUALIFIERS` , `INTERCEPTOR_BINDINGS` , `STEREOTYPES` , `BEANS` , `OBSERVERS` (クラスベースのオブザーバーのみ), `INJECTION_POINTS` にアクセス可能です。 "
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:532
 #, no-wrap
 msgid "BeanDeploymentValidator"
-msgstr ""
+msgstr "BeanDeploymentValidator"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/cdi-integration.adoc:532
 msgid "Has access to all build metadata"
-msgstr ""
+msgstr "すべてのビルドメタデータにアクセスできます"
