--- a/l10n/po/ja_JP/_versions/1.11/guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/spring-web.adoc.po
@@ -374,7 +374,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-web.adoc:204
 msgid "Add the extension by running this command:"
-msgstr ""
+msgstr "このコマンドを実行してエクステンションを追加"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/spring-web.adoc:208
@@ -595,7 +595,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-web.adoc:375
 msgid "Navigate to link:http://localhost:8080/q/swagger-ui/[localhost:8080/q/swagger-ui/] and you will see the Swagger UI screen:"
-msgstr ""
+msgstr "link:http://localhost:8080/q/swagger-ui/[localhost:8080/q/swagger-ui/] に移動すると、Swagger UIの画面が表示されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-web.adoc:377
