--- a/l10n/po/ja_JP/_versions/1.7/guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/cdi-reference.adoc.po
@@ -2109,12 +2109,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1007
 #, no-wrap
 msgid "Available Build Time Metadata"
-msgstr ""
+msgstr "利用可能なビルドタイムメタデータ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1011
 msgid "Any of the above extensions that operates with `BuildExtension.BuildContext` can leverage certain build time metadata that are generated during build.  The built-in keys located in `io.quarkus.arc.processor.BuildExtension.Key` are:"
-msgstr ""
+msgstr "`BuildExtension.BuildContext` で動作する上記のエクステンションはいずれも、ビルドタイムに生成される特定のビルドタイムメタデータを利用することができます。 `io.quarkus.arc.processor.BuildExtension.Key` にある組込キーは以下の通りです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1013
@@ -2240,7 +2240,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1042
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1044
 msgid "Has access to `ANNOTATION_STORE`, `QUALIFIERS`, `INTERCEPTOR_BINDINGS`, `STEREOTYPES`"
-msgstr ""
+msgstr "`ANNOTATION_STORE` , `QUALIFIERS` , `INTERCEPTOR_BINDINGS` . `STEREOTYPES` にアクセスできます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1043
@@ -2265,7 +2265,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1048
 msgid "Has access to all build metadata"
-msgstr ""
+msgstr "すべてのビルドメタデータにアクセスできます"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/cdi-reference.adoc:1050
