--- a/l10n/po/ja_JP/_versions/1.7/guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/spring-web.adoc.po
@@ -375,7 +375,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:204
 msgid "Add the extension by running this command:"
-msgstr ""
+msgstr "このコマンドを実行してエクステンションを追加"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/spring-web.adoc:208
