--- a/l10n/po/ja_JP/_versions/1.11/guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/reactive-routes.adoc.po
@@ -28,7 +28,7 @@ msgstr "リアクティブルートの使用"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:14
 msgid "Reactive routes propose an alternative approach to implement HTTP endpoints where you declare and chain _routes_.  This approach became very popular in the JavaScript world, with frameworks like Express.Js or Hapi.  Quarkus also offers the possibility to use reactive routes.  You can implement REST API with routes only or combine them with JAX-RS resources and servlets."
-msgstr ""
+msgstr "Reactive Routesは、HTTPエンドポイントを実装するために、 _routes_ を宣言して連鎖させる代替アプローチを提案します。このアプローチは、Express.JsやHapiのようなフレームワークで、JavaScriptの世界で非常に人気があります。Quarkusは、Reactive Routesを使用する可能性も提供しています。ルートのみでREST APIを実装することもできますし、JAX-RSリソースやサーブレットと組み合わせて実装することもできます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:16
@@ -39,33 +39,33 @@ msgstr ""
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:17
 #, no-wrap
 msgid "Quarkus HTTP"
-msgstr ""
+msgstr "Quarkus HTTP"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:24
 msgid "Before going further, let's have a look at the HTTP layer of Quarkus.  Quarkus HTTP support is based on a non-blocking and reactive engine (Eclipse Vert.x and Netty).  All the HTTP requests your application receive are handled by _event loops_ (IO Thread) and then are routed towards the code that manages the request.  Depending on the destination, it can invoke the code managing the request on a worker thread (Servlet, Jax-RS) or use the IO Thread (reactive route).  Note that because of this, a reactive route must be non-blocking or explicitly declare its blocking nature (which would result by being called on a worker thread)."
-msgstr ""
+msgstr "先に進む前に、QuarkusのHTTPレイヤーを見てみましょう。QuarkusのHTTPサポートは、ノンブロッキングでリアクティブなエンジン(Eclipse Vert.xとNetty)に基づいています。アプリケーションが受け取るすべてのHTTPリクエストは、 _イベントループ_ (IOスレッド)によって処理され、リクエストを管理するコードに向かってルーティングされます。宛先に応じて、ワーカースレッド(Servlet、Jax-RS)でリクエストを管理するコードを呼び出すか、IOスレッド(Reactive Routes)を使用します。このため、Reactive Routesはノンブロッキングであるか、そのブロッキング性を明示的に宣言しなければならないことに注意してください (ワーカースレッド上で呼び出されることで結果的にブロッキングされます)。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:26
 msgid "image:http-architecture.png[alt=Quarkus HTTP Architecture]"
-msgstr ""
+msgstr "image:http-architecture.png[alt=Quarkus HTTP Architecture]"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:27
 #, no-wrap
 msgid "Declaring reactive routes"
-msgstr ""
+msgstr "Reactive Routesの宣言"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:31
 msgid "The first way to use reactive routes is to use the `@Route` annotation.  To have access to this annotation, you need to add the `quarkus-vertx-web` extension:"
-msgstr ""
+msgstr "Reactive Routesを使用する最初の方法は、 `@Route` アノテーションを使用することです。このアノテーションにアクセスするには、 `quarkus-vertx-web` エクステンションを追加する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:33
 msgid "In your `pom.xml` file, add:"
-msgstr ""
+msgstr "`pom.xml` ファイルに以下を追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:40
@@ -80,7 +80,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:43
 msgid "Then in a _bean_, you can use the `@Route` annotation as follows:"
-msgstr ""
+msgstr "そして、 _Bean_ では、以下のように `@Route` アノテーションを使用することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:47
@@ -412,7 +412,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:209
 msgid "`io.vertx.ext.web.RoutingContext`"
-msgstr ""
+msgstr "`io.vertx.ext.web.RoutingContext`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:210
@@ -422,17 +422,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:211
 msgid "`io.quarkus.vertx.web.RoutingExchange`"
-msgstr ""
+msgstr "`io.quarkus.vertx.web.RoutingExchange`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:212
 msgid "`io.vertx.core.http.HttpServerRequest`"
-msgstr ""
+msgstr "`io.vertx.core.http.HttpServerRequest`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:213
 msgid "`io.vertx.core.http.HttpServerResponse`"
-msgstr ""
+msgstr "`io.vertx.core.http.HttpServerResponse`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:214
@@ -473,34 +473,34 @@ msgstr ""
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:262
 #, no-wrap
 msgid "`java.lang.String`"
-msgstr ""
+msgstr "`java.lang.String`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:223
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:224
 #, no-wrap
 msgid "`routingContext.request().getParam()`"
-msgstr ""
+msgstr "`routingContext.request().getParam()`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:223
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:243
 #, no-wrap
 msgid "`java.util.Optional<String>`"
-msgstr ""
+msgstr "`java.util.Optional<String>`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:224
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:244
 #, no-wrap
 msgid "`java.util.List<String>`"
-msgstr ""
+msgstr "`java.util.List<String>`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:225
 #, no-wrap
 msgid "`routingContext.request().params().getAll()`"
-msgstr ""
+msgstr "`routingContext.request().params().getAll()`"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:227
@@ -540,7 +540,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:247
 #, no-wrap
 msgid "Request Header Example"
-msgstr ""
+msgstr "リクエストヘッダーの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:254
@@ -551,53 +551,57 @@ msgid ""
 "   return header;\n"
 "}\n"
 msgstr ""
+"@Route\n"
+"String helloFromHeader(@Header(\"My-Header\") String header) {\n"
+"   return header;\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:257
 msgid "The request body can be injected into a method parameter annotated with `@io.quarkus.vertx.web.Body`."
-msgstr ""
+msgstr "リクエストボディは、 `@io.quarkus.vertx.web.Body` でアノテーションされたメソッドパラメーターに注入することができます。"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:263
 #, no-wrap
 msgid "`routingContext.getBodyAsString()`"
-msgstr ""
+msgstr "`routingContext.getBodyAsString()`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:263
 #, no-wrap
 msgid "`io.vertx.core.buffer.Buffer`"
-msgstr ""
+msgstr "`io.vertx.core.buffer.Buffer`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:264
 #, no-wrap
 msgid "`routingContext.getBody()`"
-msgstr ""
+msgstr "`routingContext.getBody()`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:264
 #, no-wrap
 msgid "`io.vertx.core.json.JsonObject`"
-msgstr ""
+msgstr "`io.vertx.core.json.JsonObject`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:265
 #, no-wrap
 msgid "`routingContext.getBodyAsJson()`"
-msgstr ""
+msgstr "`routingContext.getBodyAsJson()`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:265
 #, no-wrap
 msgid "`io.vertx.core.json.JsonArray`"
-msgstr ""
+msgstr "`io.vertx.core.json.JsonArray`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:266
 #, no-wrap
 msgid "`routingContext.getBodyAsJsonArray()`"
-msgstr ""
+msgstr "`routingContext.getBodyAsJsonArray()`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:266
@@ -1159,7 +1163,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:593
 msgid "Add the extension by running this command:"
-msgstr ""
+msgstr "このコマンドを実行してエクステンションを追加"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:597
@@ -1238,7 +1242,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:648
 msgid "Also see link:openapi-swaggerui[the OpenAPI Guide]."
-msgstr ""
+msgstr "link:openapi-swaggerui[OpenAPIガイド] も参照してください。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:649
@@ -1249,7 +1253,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:653
 msgid "You can use link:https://github.com/eclipse/microprofile-open-api[MicroProfile OpenAPI] to better document your schema, example, adding header info, or specifying the return type on `void` methods might be usefull :"
-msgstr ""
+msgstr "link:https://github.com/eclipse/microprofile-open-api[MicroProfile OpenAPI ] を使用してスキーマをより良くドキュメント化することができます。例えば、ヘッダ情報を追加したり、 `void` メソッドでリターンタイプを指定したりすると便利です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:670
@@ -1312,17 +1316,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:696
 msgid "Header information about your API."
-msgstr ""
+msgstr "APIに関するヘッダー情報"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:697
 msgid "Defining the response"
-msgstr ""
+msgstr "レスポンスの定義"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:699
 msgid "This will generate this OpenAPI schema:"
-msgstr ""
+msgstr "これにより、このOpenAPIスキーマが生成されます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:742
@@ -1378,17 +1382,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:748
 msgid "Swagger UI is included by default when running in `dev` or `test` mode, and can optionally added to `prod` mode.  See <<openapi-swaggerui.adoc#use-swagger-ui-for-development,the Swagger UI>> Guide for more details."
-msgstr ""
+msgstr "Swagger UIは、 `dev` または `test` モードで実行しているときにデフォルトで含まれており、オプションで `prod` モードに追加することができます。詳細については、 link:openapi-swaggerui.html#use-swagger-ui-for-development[Swagger UI] ガイドを参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:750
 msgid "Navigate to link:http://localhost:8080/q/swagger-ui/[localhost:8080/q/swagger-ui/] and you will see the Swagger UI screen:"
-msgstr ""
+msgstr "link:http://localhost:8080/q/swagger-ui/[localhost:8080/q/swagger-ui/] に移動すると、Swagger UIの画面が表示されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:752
 msgid "image:reactive-routes-guide-screenshot01.png[alt=Swagger UI]"
-msgstr ""
+msgstr "image:reactive-routes-guide-screenshot01.png[alt=Swagger UI]"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:753
@@ -1399,4 +1403,4 @@ msgstr "まとめ"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:756
 msgid "This guide has introduced how you can use reactive routes to define an HTTP endpoint.  It also describes the structure of the Quarkus HTTP layer and how to write filters."
-msgstr ""
+msgstr "このガイドでは、Reactive Routesを使用してHTTPエンドポイントを定義する方法を紹介してきました。また、Quarkus HTTPレイヤーの構造とフィルターの書き方についても説明しました。"
