--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-search-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-search-elasticsearch.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:11
 msgid "You have a Hibernate ORM-based application? You want to provide a full-featured full-text search to your users? You're at the right place."
-msgstr ""
+msgstr "Hibernate ORMベースのアプリケーションをお持ちですか?フル機能のフルテキスト検索をユーザーに提供したいですか?あなたは正しい場所にいます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:14
@@ -212,7 +212,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:104
 msgid "First, let's create our Hibernate ORM entities `Book` and `Author` in the `model` subpackage."
-msgstr ""
+msgstr "まず、 `model` サブパッケージに Hibernate ORM エンティティー `Book` と `Author` を作成しましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:108
@@ -324,7 +324,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:150
 msgid "We are using Hibernate ORM with Panache, it is not mandatory."
-msgstr ""
+msgstr "PanacheでHibernate ORMを使用していますが、必須ではありません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-search-elasticsearch.adoc:152
