Add some translations

--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:05+0000\n"
-"PO-Revision-Date: 2021-03-16 22:40+0900\n"
+"PO-Revision-Date: 2021-04-02 21:50+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -38,15 +38,13 @@ msgstr "Hibernate ORMのセットアップと設定"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:17
-#, fuzzy
 msgid "When using Hibernate ORM in Quarkus, you don't need to have a `persistence.xml` resource to configure it."
-msgstr "QuarkusでHibernate ORMを使用する場合は、 `persistence.xml` リソースがなくても設定できます。"
+msgstr "QuarkusでHibernate ORMを使用する場合は、 設定の為に `persistence.xml` リソースは必要ありません。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:20
-#, fuzzy
 msgid "Using such a classic configuration file is an option, but unnecessary unless you have specific advanced needs; so we'll see first how Hibernate ORM can be configured without a `persistence.xml` resource."
-msgstr "`persistence.xml` このような古典的な設定ファイルを使用することはオプションですが、特定の高度なニーズがない限り不要です。"
+msgstr "このような古典的な設定ファイルを使用することは選択しとしてありますが、特定の高度なニーズがない限り不要です。そのため、まずはHibernate ORMを `persistence.xml` リソース無しで設定できることをみていきましょう。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:22
@@ -55,21 +53,18 @@ msgstr "Quarkusでは、以下を実施するだけです:"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:24
-#, fuzzy
 msgid "add your configuration settings in `{config-file}`"
-msgstr "で設定を追加します。 `{config-file}`"
+msgstr "`{config-file}` に設定を追加します。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:25
-#, fuzzy
 msgid "annotate your entities with `@Entity` and any other mapping annotation as usual"
 msgstr "エンティティーに `@Entity` やその他のマッピングアノテーションを通常通りにアノテーションします。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:27
-#, fuzzy
 msgid "Other configuration needs have been automated: Quarkus will make some opinionated choices and educated guesses."
-msgstr "その他の設定の必要性は自動化されています。Quarkusは、いくつかの意見に基づいた選択と経験に基づいた推測を行います。"
+msgstr "その他の設定の必要性は自動化されています。Quarkusは、いくつかの定見に基づいた選択と経験に基づいた推測を行います。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:29
@@ -78,61 +73,52 @@ msgstr "以下の依存関係をプロジェクトに追加してください:"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:31
-#, fuzzy
 msgid "the Hibernate ORM extension: `io.quarkus:quarkus-hibernate-orm`"
-msgstr "Hibernate ORM エクステンションを使用しています。 `io.quarkus:quarkus-hibernate-orm`"
+msgstr "Hibernate ORM エクステンション: `io.quarkus:quarkus-hibernate-orm`"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:32
-#, fuzzy
 msgid "your JDBC driver extension; the following options are available:"
-msgstr "JDBC ドライバーエクステンションを使用している場合は、以下のオプションを使用できます。"
+msgstr "JDBC ドライバーエクステンション。以下のオプションを使用できます。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:33
-#, fuzzy
 msgid "`quarkus-jdbc-db2` for link:https://www.ibm.com/products/db2-database[IBM DB2]"
-msgstr "`quarkus-jdbc-db2` link:https://www.ibm.com/products/db2-database[IBM DB2の] ための"
+msgstr "link:https://www.ibm.com/products/db2-database[IBM DB2の] ための `quarkus-jdbc-db2`"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:34
-#, fuzzy
 msgid "`quarkus-jdbc-derby` for link:https://db.apache.org/derby/[Apache Derby]"
-msgstr "`quarkus-jdbc-derby` link:https://db.apache.org/derby/[アパッチダービー] について"
+msgstr "link:https://db.apache.org/derby/[アパッチダービー] のための `quarkus-jdbc-derby`"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:35
-#, fuzzy
 msgid "`quarkus-jdbc-h2` for link:https://www.h2database.com/html/main.html[H2]"
-msgstr "`quarkus-jdbc-h2` link:https://www.h2database.com/html/main.html[H2] について"
+msgstr "link:https://www.h2database.com/html/main.html[H2] のための `quarkus-jdbc-h2`"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:36
-#, fuzzy
 msgid "`quarkus-jdbc-mariadb` for link:https://mariadb.com/[MariaDB]"
-msgstr "`quarkus-jdbc-mariadb` for link:https://mariadb.com/[MariaDB]"
+msgstr "link:https://mariadb.com/[MariaDB] のための `quarkus-jdbc-mariadb`"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:37
-#, fuzzy
 msgid "`quarkus-jdbc-mssql` for link:https://www.microsoft.com/en-gb/sql-server/[Microsoft SQL Server]"
-msgstr "`quarkus-jdbc-mssql` link:https://www.microsoft.com/en-gb/sql-server/[Microsoft SQL Server] 用"
+msgstr "link:https://www.microsoft.com/en-gb/sql-server/[Microsoft SQL Server] のための `quarkus-jdbc-mssql`"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:38
-#, fuzzy
 msgid "`quarkus-jdbc-mysql` for link:https://www.mysql.com/[MySQL]"
-msgstr "`quarkus-jdbc-mysql` for link:https://www.mysql.com/[MySQL]"
+msgstr "link:https://www.mysql.com/[MySQL] のための `quarkus-jdbc-mysql`"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:39
-#, fuzzy
 msgid "`quarkus-jdbc-postgresql` for link:https://www.postgresql.org/[PostgreSQL]"
-msgstr "`quarkus-jdbc-postgresql` for link:https://www.postgresql.org/[PostgreSQL]"
+msgstr "link:https://www.postgresql.org/[PostgreSQL] のための `quarkus-jdbc-postgresql`"
 
 #. type: Block title
 #: upstream/_guides/hibernate-orm.adoc:42
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example dependencies using Maven"
 msgstr "Mavenを使った依存関係の例"
 
@@ -162,13 +148,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:61
-#, fuzzy
 msgid "Annotate your persistent objects with `@Entity`, then add the relevant configuration properties in `{config-file}`."
-msgstr "`@Entity` で persistent オブジェクトに注釈を付けてから、 `{config-file}` で関連する構成プロパティーを追加します。"
+msgstr " persistent オブジェクトに`@Entity` アノテーションを付けてから、 `{config-file}` で関連する設定プロパティーを追加します。"
 
 #. type: Block title
 #: upstream/_guides/hibernate-orm.adoc:63
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example `{config-file}`"
 msgstr "例 `{config-file}`"
 
@@ -332,7 +317,6 @@ msgstr "Hibernate ORMの起動時にSQL文をロードするには、 `import.sq
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:142
-#, fuzzy
 msgid "This is useful to have a data set ready for your tests or demos."
 msgstr "テストやデモ用のデータセットを用意しておくと便利です。"
 
@@ -480,19 +464,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:220
-#, fuzzy
 msgid "Define a datasource named `users`."
 msgstr "`users` という名前のデータソースを定義します。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:221
-#, fuzzy
 msgid "Define a datasource named `inventory`."
 msgstr "`inventory` という名前のデータソースを定義します。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:222
-#, fuzzy
 msgid "Define a persistence unit called `users`."
 msgstr "`users` という永続化ユニットを定義します。"
 
@@ -1149,25 +1130,22 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/hibernate-orm.adoc:546
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Caching of queries"
 msgstr "クエリのキャッシュ"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:549
-#, fuzzy
 msgid "Queries can also benefit from second-level caching. Cached query results can be returned immediately to the caller, avoiding to run the query on the database."
-msgstr "クエリは、第二レベルのキャッシュの恩恵を受けることもできます。キャッシュされたクエリの結果を即座に呼び出し元に返すことができるので、データベース上でクエリを実行する必要がありません。"
+msgstr "クエリは、第二レベルのキャッシュの恩恵を受けることもできます。キャッシュされたクエリの結果は即座に呼び出し元に返すことができるので、データベース上でクエリを実行する必要がありません。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:551
-#, fuzzy
 msgid "Be careful as this implies the results might not reflect recent changes."
-msgstr "最近の変化を反映していない可能性があることを示唆しているので注意が必要です。"
+msgstr "最近の変化を反映していない可能性があることを含意しているので注意が必要です。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:553
-#, fuzzy
 msgid "To cache a query, mark it as cacheable on the `Query` instance:"
 msgstr "クエリをキャッシュするには、 `Query` インスタンス上でキャッシュ可能なものとしてマークします。"
 
@@ -1931,7 +1909,7 @@ msgstr ""
 
 #. type: Title ====
 #: upstream/_guides/hibernate-orm.adoc:928
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DATABASE approach"
 msgstr "データベースアプローチ"
 
