Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/vault-auth.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/vault-auth.adoc.po
@@ -708,7 +708,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault-auth.adoc:411
 msgid "You should see:"
-msgstr ""
+msgstr "次のような出力が得られるはずです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/vault-auth.adoc:428
