--- a/l10n/po/ja_JP/_versions/1.11/guides/vault-datasource.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/vault-datasource.adoc.po
@@ -332,7 +332,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault-datasource.adoc:166
 msgid "You should see:"
-msgstr ""
+msgstr "次のような出力が得られるはずです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/vault-datasource.adoc:170
