--- a/l10n/po/ja_JP/_versions/1.7/guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/vault.adoc.po
@@ -28,22 +28,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:21
 msgid "https://www.vaultproject.io/[HashiCorp Vault] is a multi-purpose tool aiming at protecting sensitive data, such as credentials, certificates, access tokens, encryption keys, ... In the context of Quarkus, several use cases are supported:"
-msgstr ""
+msgstr "link:https://www.vaultproject.io/[HashiCorp Vault] は、クレデンシャル、証明書、アクセストークン、暗号化キーなどの機密データの保護を目的とした多目的ツールです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:24
 msgid "mounting a map of properties stored into the https://www.vaultproject.io/docs/secrets/kv/index.html[Vault kv secret engine] as an Eclipse MicroProfile config source"
-msgstr ""
+msgstr "link:https://www.vaultproject.io/docs/secrets/kv/index.html[Vault kv シークレットエンジン] に保存されたプロパティーのマップを Eclipse MicroProfile の設定ソースとしてマウントします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:25
 msgid "fetching credentials from Vault when configuring an Agroal datasource, as documented in the {vault-datasource-guide}"
-msgstr ""
+msgstr "Agroal データソースを構成する際に、{vault-datasource-guide} で説明されているように、Vault から資格情報をフェッチします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:26
 msgid "accessing Vault _kv secret engine_ programmatically"
-msgstr ""
+msgstr "Vault _kv のシークレットエンジンに_ プログラムでアクセスする"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:27
@@ -53,12 +53,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:29
 msgid "support for the https://www.vaultproject.io/docs/secrets/transit[Transit Secret Engine] as documented in the {vault-transit-guide}"
-msgstr ""
+msgstr "link:https://www.vaultproject.io/docs/secrets/transit[トランジットシークレットエンジン] のサポートは {vault-transit-guide} で文書化されています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:30
 msgid "support for several authentication methods as documented in the {vault-auth-guide}"
-msgstr ""
+msgstr "{vault-auth-guide} で説明されているように、いくつかの認証方法をサポート"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:33
@@ -105,12 +105,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/vault.adoc:46
 #, no-wrap
 msgid "Starting Vault"
-msgstr ""
+msgstr "ボールトの起動"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:49
 msgid "Let's start Vault in development mode:"
-msgstr ""
+msgstr "開発モードでVaultを起動してみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/vault.adoc:53
@@ -121,7 +121,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:56
 msgid "You can check that vault is running with:"
-msgstr ""
+msgstr "次のコマンドでVaultが実行されていることを確認することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/vault.adoc:59
@@ -136,7 +136,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/vault.adoc:320
 #: upstream/_versions/1.7/guides/vault.adoc:363
 msgid "You should see:"
-msgstr ""
+msgstr "次のような出力が得られるはずです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/vault.adoc:66
@@ -533,7 +533,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:305
 msgid "Now compile the application and run it:"
-msgstr ""
+msgstr "では、アプリケーションをコンパイルして実行してみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/vault.adoc:310
@@ -546,7 +546,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:313
 msgid "Finally test the new endpoint:"
-msgstr ""
+msgstr "最後に新しいエンドポイントをテストします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/vault.adoc:317
