Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
@@ -39,12 +39,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:17
 msgid "When using Hibernate ORM in Quarkus, you don't need to have a `persistence.xml` resource to configure it."
-msgstr ""
+msgstr "QuarkusでHibernate ORMを使用する場合は、 設定の為に `persistence.xml` リソースは必要ありません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:20
 msgid "Using such a classic configuration file is an option, but unnecessary unless you have specific advanced needs; so we'll see first how Hibernate ORM can be configured without a `persistence.xml` resource."
-msgstr ""
+msgstr "このような古典的な設定ファイルを使用することは選択しとしてありますが、特定の高度なニーズがない限り不要です。そのため、まずはHibernate ORMを `persistence.xml` リソース無しで設定できることをみていきましょう。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:22
@@ -54,17 +54,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:24
 msgid "add your configuration settings in `{config-file}`"
-msgstr ""
+msgstr "`{config-file}` に設定を追加します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:25
 msgid "annotate your entities with `@Entity` and any other mapping annotation as usual"
-msgstr ""
+msgstr "エンティティーに `@Entity` やその他のマッピングアノテーションを通常通りにアノテーションします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:27
 msgid "Other configuration needs have been automated: Quarkus will make some opinionated choices and educated guesses."
-msgstr ""
+msgstr "その他の設定の必要性は自動化されています。Quarkusは、いくつかの定見に基づいた選択と経験に基づいた推測を行います。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:29
@@ -74,47 +74,47 @@ msgstr "以下の依存関係をプロジェクトに追加してください:"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:31
 msgid "the Hibernate ORM extension: `io.quarkus:quarkus-hibernate-orm`"
-msgstr ""
+msgstr "Hibernate ORM エクステンション: `io.quarkus:quarkus-hibernate-orm`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:32
 msgid "your JDBC driver extension; the following options are available:"
-msgstr ""
+msgstr "JDBC ドライバーエクステンション。以下のオプションを使用できます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:33
 msgid "`quarkus-jdbc-db2` for link:https://www.ibm.com/products/db2-database[IBM DB2]"
-msgstr ""
+msgstr "link:https://www.ibm.com/products/db2-database[IBM DB2の] ための `quarkus-jdbc-db2`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:34
 msgid "`quarkus-jdbc-derby` for link:https://db.apache.org/derby/[Apache Derby]"
-msgstr ""
+msgstr "link:https://db.apache.org/derby/[アパッチダービー] のための `quarkus-jdbc-derby`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:35
 msgid "`quarkus-jdbc-h2` for link:https://www.h2database.com/html/main.html[H2]"
-msgstr ""
+msgstr "link:https://www.h2database.com/html/main.html[H2] のための `quarkus-jdbc-h2`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:36
 msgid "`quarkus-jdbc-mariadb` for link:https://mariadb.com/[MariaDB]"
-msgstr ""
+msgstr "link:https://mariadb.com/[MariaDB] のための `quarkus-jdbc-mariadb`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:37
 msgid "`quarkus-jdbc-mssql` for link:https://www.microsoft.com/en-gb/sql-server/[Microsoft SQL Server]"
-msgstr ""
+msgstr "link:https://www.microsoft.com/en-gb/sql-server/[Microsoft SQL Server] のための `quarkus-jdbc-mssql`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:38
 msgid "`quarkus-jdbc-mysql` for link:https://www.mysql.com/[MySQL]"
-msgstr ""
+msgstr "link:https://www.mysql.com/[MySQL] のための `quarkus-jdbc-mysql`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:39
 msgid "`quarkus-jdbc-postgresql` for link:https://www.postgresql.org/[PostgreSQL]"
-msgstr ""
+msgstr "link:https://www.postgresql.org/[PostgreSQL] のための `quarkus-jdbc-postgresql`"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:42
@@ -149,13 +149,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:61
 msgid "Annotate your persistent objects with `@Entity`, then add the relevant configuration properties in `{config-file}`."
-msgstr ""
+msgstr " persistent オブジェクトに`@Entity` アノテーションを付けてから、 `{config-file}` で関連する設定プロパティーを追加します。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:63
 #, no-wrap
 msgid "Example `{config-file}`"
-msgstr ""
+msgstr "例 `{config-file}`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:70
@@ -704,22 +704,22 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:375
 #, no-wrap
 msgid "Caching of queries"
-msgstr ""
+msgstr "クエリのキャッシュ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:378
 msgid "Queries can also benefit from second-level caching. Cached query results can be returned immediately to the caller, avoiding to run the query on the database."
-msgstr ""
+msgstr "クエリは、第二レベルのキャッシュの恩恵を受けることもできます。キャッシュされたクエリの結果は即座に呼び出し元に返すことができるので、データベース上でクエリを実行する必要がありません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:380
 msgid "Be careful as this implies the results might not reflect recent changes."
-msgstr ""
+msgstr "最近の変化を反映していない可能性があることを含意しているので注意が必要です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:382
 msgid "To cache a query, mark it as cacheable on the `Query` instance:"
-msgstr ""
+msgstr "クエリをキャッシュするには、 `Query` インスタンス上でキャッシュ可能なものとしてマークします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:387
@@ -1358,7 +1358,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:709
 #, no-wrap
 msgid "DATABASE approach"
-msgstr ""
+msgstr "データベースアプローチ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:712
