--- a/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
@@ -466,7 +466,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:221
 msgid "The implementation is pretty straightforward and you just need to define your endpoints using the JAX-RS annotations and use the `FruitService` to list/add new fruits."
-msgstr ""
+msgstr "実装はとても簡単で、JAX-RSのアノテーションを使ってエンドポイントを定義し、 `FruitService` を使って新しいフルーツをリストアップ/追加するだけです。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/mongodb.adoc:222
@@ -495,7 +495,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:234
 msgid "In this example, we are using a single instance running on localhost:"
-msgstr ""
+msgstr "この例では、ローカルホスト上で実行されている単一のインスタンスを使用しています。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mongodb.adoc:239
