--- a/l10n/po/ja_JP/_guides/all-builditems.adoc.po
+++ b/l10n/po/ja_JP/_guides/all-builditems.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-01 13:10+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-03 09:15+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_guides/all-builditems.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_guides/all-builditems.adoc:3
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid ""
 #| "layout: guides-configuration-reference\n"
 #| "---\n"
@@ -37,7 +37,7 @@ msgstr ""
 
 #. type: Title =
 #: upstream/_guides/all-builditems.adoc:11
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Build Items"
 msgstr "Quarkus - ビルドアイテム"
 
