--- a/l10n/po/ja_JP/_guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-oauth2.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-31 15:04+0000\n"
-"PO-Revision-Date: 2021-03-31 23:31+0900\n"
+"PO-Revision-Date: 2021-04-03 09:36+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -42,9 +42,8 @@ msgstr "このエクステンションは、不透明なベアラートークン
 
 #. type: Plain text
 #: upstream/_guides/security-oauth2.adoc:21
-#, fuzzy
 msgid "If the OAuth2 Authentication server provides JWT Bearer Tokens then you should consider using either link:security-openid-connect[OpenId Connect] or link:security-jwt[SmallRye JWT] extensions instead.  OpenId Connect extension has to be used if the Quarkus application needs to authenticate the users using OIDC Authorization Code Flow, please read link:security-openid-connect-web-authentication[Using OpenID Connect to Protect Web Applications] guide for more information."
-msgstr "OAuth2認証サーバーがJWT Bearer Tokensを提供している場合は、 link:security-openid-connect[OpenId Connect] または link:security-jwt[MicroProfile JWT RBAC] エクステンションの使用を検討する必要があります。OpenId Connectエクステンションは、QuarkusアプリケーションがOIDC Authorization Code Flowを使用してユーザーを認証する必要がある場合に link:security-openid-connect-web-authentication[使用] する必要があります。"
+msgstr "OAuth2認証サーバーがJWT Bearer Tokensを提供している場合は、 link:security-openid-connect[OpenId Connect] または link:security-jwt[MicroProfile JWT RBAC] エクステンションの使用を検討する必要があります。OpenId Connectエクステンションは、QuarkusアプリケーションがOIDC Authorization Code Flowを使用してユーザーを認証する必要がある場合に使用する必要があります。詳しくは link:security-openid-connect-web-authentication[OpenID Connectを利用したウェブアプリケーションの保護]ガイドをご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/security-oauth2.adoc:24
