--- a/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-03 10:15+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -50,7 +50,6 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:24
-#, fuzzy
 msgid "less than 15 minutes"
 msgstr "15分未満"
 
@@ -110,7 +109,7 @@ msgstr "ソリューションは `microprofile-fault-tolerance-quickstart` {quic
 
 #. type: Title ==
 #: upstream/_guides/smallrye-fault-tolerance.adoc:45
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -134,9 +133,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:61
-#, fuzzy
 msgid "This command generates a Maven structure, importing the extensions for RESTEasy/JAX-RS and SmallRye Fault Tolerance."
-msgstr "このコマンドは、RESTEasy/JAX-RSとSmallRye Fault Toleranceの拡張機能をインポートしたMaven構造を生成します。"
+msgstr "このコマンドは、RESTEasy/JAX-RSとSmallRye Fault ToleranceのエクステンションをインポートしたMaven構造を生成します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:64
@@ -871,24 +869,20 @@ msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:485
-#, fuzzy
 msgid "SmallRye Fault Tolerance allows to improve resiliency of your application, without having an impact on the complexity of our business logic."
 msgstr "SmallRye Fault Toleranceは、ビジネスロジックの複雑さに影響を与えることなく、アプリケーションの耐障害性を向上させます。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:487
-#, fuzzy
 msgid "All that is needed to enable the fault tolerance features in Quarkus is:"
 msgstr "Quarkusのフォールトトレランス機能を有効にするために必要なのは"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:489
-#, fuzzy
 msgid "adding the `smallrye-fault-tolerance` Quarkus extension to your project using the `quarkus-maven-plugin`:"
-msgstr "`smallrye-fault-tolerance` Quarkus エクステンションをプロジェクトに追加するには、 `quarkus-maven-plugin`:"
+msgstr "`quarkus-maven-plugin` で `smallrye-fault-tolerance` Quarkus エクステンションをプロジェクトに追加することです :"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:495
-#, fuzzy
 msgid "or simply adding the following Maven dependency:"
 msgstr "または、以下のMavenの依存関係を単純に追加することもできます。"
